--- a/initial-value-generator/src/main/resources/application.yml
+++ b/initial-value-generator/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/initial-value-generator
+    url: jdbc:mysql://localhost/jpa
     username: root
-    password: admin
+    password: yy123456
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
